# fin

./: Cargo.toml  README.md  dist-workspace.toml  fin-lock.toml
.github/workflows/: release.yml
src/: core.rs  lock.rs  main.rs
