[package]
name = "fin"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
regex = "1.7"
tempfile = "3.3"
dirs = "6.0"
rayon = "1.11.0"
toml = "0.9.8"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
